--- a/docker/configs/Dockerfile-php-dev
+++ b/docker/configs/Dockerfile-php-dev
@@ -1,19 +1,25 @@
 FROM php:8.4-fpm-alpine
 
 RUN apk update
-RUN apk add git vim openssl libpq-dev bash
+RUN apk add --update linux-headers
+RUN apk add git vim openssl libpq-dev bash supervisor $PHPIZE_DEPS
 
 RUN docker-php-ext-install pdo pdo_pgsql
-
-RUN apk add --update linux-headers
-RUN apk add $PHPIZE_DEPS
 
 RUN pecl install xdebug \
     && docker-php-ext-enable xdebug \
     && echo "xdebug.mode=coverage" > $PHP_INI_DIR/conf.d/xdebug.ini
+
+RUN pecl install redis \
+    && docker-php-ext-enable redis
 
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
 RUN php composer-setup.php --install-dir=/usr/local/bin --filename=composer
 RUN rm -rf composer-setup.php && composer config --global repos.packagist composer https://packagist.org
 
 WORKDIR /var/www/html
+
+COPY ./.env.example .env
+COPY ./docker/configs/supervisord.conf /etc/supervisord.conf
+
+CMD /usr/bin/supervisord -c /etc/supervisord.conf;php-fpm
